fix: 模板标题修改

--- a/webpack-02/src/assets/html/index.html
+++ b/webpack-02/src/assets/html/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="app">英雄不问出路，流氓不看岁数</div>
+    <div id="app">webpack 02</div>
   </body>
 </html>
